Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.
  
  After Zope 2.11.1 

    Bugs Fixed

      - updated to ZODB 3.8.1

      - Lauchpad #143736,#271395: fixed AttributeError' on _ltid in TempStorage

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to
        import the same broken module.

      - DateTime conversion of datetime objects with non-pytz tzinfo. 
        Timezones() returns a copy of the timezone list (allows tests to run).
        (Backport of r89373 from trunk).

      - LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers

      - integrated Hotfix-2008-08-12

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #262313: respect the 'Expand macros when editing' flag
        when editing a page template through the ZMI


  Zope 2.11.1 (2008/07/17)

    Bugs Fixed

      - Suppressed DeprecationWarning during import of ZPublisher.Iterators:
        that module needs to use Z2-style interfaces in 2.11, for BBB, but
        the Interface module itself issues the warning on import.

      - Launchpad #246748: added 'immediate' option to sendXXX() methods
        for sending a mail immediately by-passing the zope.sendmail delivery
        mechanism
    
      - Launchpad #246290: fixed backward compatibility issue

      - zope.testing : updated to 3.5.3

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - zope.viewlets: updated to 3.4.2
